# ai-cli-history-viewer

./: .gitignore  README.md  app.py  config.py  data_loader.py  index.html  models.py  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: docker-release.yml  release.yml
assets/skills/acliv-release-automation/: SKILL.md
assets/skills/aichv-release-automation/: SKILL.md
deploy/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  install.sh
docs/: AGENTS.md  DETAIL_ASYNC_LOADING_PLAN.md  RELEASE_AUTOMATION_PLAN.md  SEARCH_UPGRADE_PLAN.md
public/css/: style.css
scripts/: assert-release-notes.ps1  build-release.ps1  check.ps1  publish-release.ps1
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  lib.rs  paths.rs  watcher.rs
src-tauri/src/search_index/: indexer.rs  mod.rs  query.rs  schema.rs  status.rs  types.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/src/session_manager/providers/: claude.rs  codex.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs  utils.rs
src/lib/: api.ts
static/css/: style.css
static/js/: app.js
templates/: index.html
