[package]
name = "ai-cli-history-viewer"
version = "1.0.2"
description = "AI CLI History Viewer - High Performance Desktop App"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Utilities
dirs = "5.0"
regex = "1.11"
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
