[package]
name = "acliv"
version = "1.0.6"
description = "ACLIV - High Performance Desktop App"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "acliv"

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-log", "dep:tauri-build"]
web = ["dep:axum", "dep:tokio", "dep:tower-http"]

[[bin]]
name = "acliv"
path = "src/main.rs"
required-features = ["desktop"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "acliv-web"
path = "src/bin/acliv-web.rs"
required-features = ["web"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["devtools"], optional = true }
tauri-plugin-log = { version = "2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Utilities
dirs = "5.0"
regex = "1.11"
chrono = { version = "0.4.44", features = ["serde"] }
axum = { version = "0.7.9", optional = true }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"], optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "6.1.1"

[dev-dependencies]
tempfile = "3"
